--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1 class="fs-1">Subir Archivos</h1>
-        <form action="/" method="post" enctype="multipart/form-data">
+        <form action="/upload_file" method="post" enctype="multipart/form-data">
             <div class="mb-3">
                 <label for="file1" class="form-label">Archivo SIMM - Reporte WO.xlsx</label>
                 <input type="file" name="file1" class="form-control" required>
