mejoras y correccion de bugs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -248,3 +248,8 @@ body {
         }
     }
 }
+
+#dataTable tbody tr.row-selected > td {
+    background-color: #c1c1c1 !important;
+    color: #333;
+}
